# chebyshev

./: README.md  environment.yml  essentials.org  generate_data.py  kwant_baby.py  plot_spectra.py  pyproject.toml  r_10p000000.npz  r_2p000000.npz  sim.py  sim_cirlce.py  train.py  vanilla_dense.py
scripts/: download.py  generate_data.py  plot_spectra.py  train.py
src/chebyshev/: utils.py  w90.py
tests/: test_boundary.py  test_parsing.py
